# modular-mandelbrot

./: .gitignore  README.md  pyproject.toml
docs/: index.html  theme.css
notebooks/: Mandelbrot (bad).ipynb  Mandelbrot (better).ipynb  Mandelbrot (numba).ipynb  Mandelbrot (parallel).ipynb
