[tool.poetry]
name = "modular-code"
version = "0.1.0"
description = "An exercise in modular coding"
authors = ["Johan Hidding <j.hidding@esciencecenter.nl>"]
license = "Apache 2"

[tool.poetry.dependencies]
python = "3.9"
matplotlib = "^3.4.3"
numba = "^0.54.0"
jupyterlab = "^3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
